<resources>
    <string name="app_name">CricPlanet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_pager_card_view">view pager card view</string>
    <string name="matches">Matches</string>
    <string name="home">Home</string>
    <string name="team_name">team</string>
    <string name="favourite_image_button">favourite Image button</string>
    <string name="image_view">image view</string>
    <string name="team">Team</string>
    <string name="fixture_name">ODI</string>
    <string name="fixture_note">Fixture Note</string>
    <string name="vs">VS</string>
    <string name="find_your_match">Find your match</string>
    <string name="viewpager_for_slider">viewpager for slider</string>
    <string name="match_information">Match Information</string>
    <string name="no_status">No Status</string>
    <string name="age">age</string>
    <string name="today_s_match">Today\'s Matches</string>
    <string name="recent_matches">Recent Matches</string>
    <string name="series">Series</string>
    <string name="players">Players</string>
    <string name="ranking">Ranking</string>
    <string name="type">type</string>
    <string name="country">country</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="match_squad">Match Squads</string>
    <string name="team_squad">Team Squad</string>
    <string name="test">TEST</string>
    <string name="t20">T20</string>
    <string name="odi">ODI</string>
    <string name="league">LEAGUE</string>
    <string name="all_upcoming_matches">All Upcoming Matches</string>
    <string name="scorecard">Scorecard</string>
    <string name="match_history">Match History</string>
    <string name="name">Name</string>
    <string name="run">Run</string>
    <string name="ball">Ball</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="sr">SR</string>
    <string name="score">score</string>
    <string name="rank">rank</string>
</resources>