<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/matchTabLayoutFragment"
        android:title="@string/matches"
        android:icon="@drawable/ic_sports_cricket" />
    <item
        android:id="@+id/seriesFragment"
        android:title="@string/series"
        android:icon="@drawable/ic_groups" />
    <item
        android:id="@id/playerFragment"
        android:title="@string/players"
        android:icon="@drawable/ic_groups" />
    <item
        android:id="@id/rankingTabLayoutFragment"
        android:title="@string/ranking"
        android:icon="@drawable/ic_groups" />
</menu>