<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="20dp"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/league_image"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:maxHeight="150dp"
                android:minHeight="130dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_view"
                android:elevation="20dp"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/card_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_name"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/league_name"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_name"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/league_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:layout_marginHorizontal="5dp"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>
<!--
            <TextView
                android:id="@+id/player_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:textSize="12sp"
                android:textStyle="bold" />-->

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
