<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_team_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragment.teamdetails.viewpager.TeamDetailsTabLayoutFragment">

    <LinearLayout
        android:id="@+id/top_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/horizontalLine"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tab_layout_team_details">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/type"
                        android:minWidth="2dp"
                        android:textColor="@color/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/horizontalLine" />

                <LinearLayout
                    android:id="@+id/team1_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp">

                        <ImageView
                            android:id="@+id/team_image"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_view"
                            android:elevation="20dp"
                            android:maxHeight="150dp"
                            android:minHeight="130dp"
                            tools:src="@tools:sample/backgrounds/scenic" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/team_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/team"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_country"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_team_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/view_pager_card_view"
        app:tabGravity="center"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/cardview_light_background"
        app:tabTextColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/top_info"
        app:layout_constraintBottom_toTopOf="@id/view_pager_2_team_details"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_2_team_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout_team_details" />

</androidx.constraintlayout.widget.ConstraintLayout>