<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fixture_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fixture_name"
                android:minWidth="2dp"
                android:textColor="@color/colorOnSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/horizontalLine" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal|center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/match_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="round"
                android:textColor="@color/horizontalLine"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fixture_status_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView android:layout_width="wrap_content"
                android:id="@+id/fixture_status_card"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginVertical="3dp"
                android:layout_marginHorizontal="5dp"
                app:cardElevation="2dp"
                app:layout_constraintStart_toEndOf="@+id/match_round"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fixture_date">

                <TextView
                    android:id="@+id/fixture_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:ellipsize="end"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:text="@string/no_status"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/fixture_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="date"
                android:textColor="@color/colorOnSecondary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fixture_status_card"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/horizontalLine" />

        <TextView
            android:id="@+id/fixture_note_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="2dp"
            android:gravity="center"
            android:hint="@string/fixture_note"
            android:textColor="#6E6861"
            android:textSize="13sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
